[tool.poetry]
name = "commspt-bot"
version = "0.1.0"
description = ""
authors = ["SerinaNya <34389622+SerinaNya@users.noreply.github.com>"]
license = "AGPLv3"
readme = "README.md"
# packages = [{include = "commspt_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
# graia-ariadne = "0.11.7"
# graia-saya = "0.0.19"
# graia-broadcast = "0.23.5"
# graia-amnesia = "0.9.0"
# creart = "0.3.0"
# creart-graia = "0.1.7"
yggdrasil-mc = "0.1b7"
pillow = "^10.0.0"
arrow = "^1.2.3"
motor = "^3.3.2"
pydantic = {version = "1.10.13", extras = ["dotenv"]}
graia-ariadne = "^0.11.7"
graia-broadcast = "^0.23.5"
graia-saya = "^0.0.19"

[[tool.poetry.source]]
name = "sjtu"
url = "https://mirror.sjtu.edu.cn/pypi/web/simple"
priority = "default"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
